update new files

--- a/ingress.html
+++ b/ingress.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Cargo links</title>
+  <title>Ingress links</title>
   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
 <style>
