update new files

--- a/egress.html
+++ b/egress.html
@@ -32,7 +32,7 @@
 </head>
 <body>
   <h2>
-    Survey links:
+    Survey link:
   </h2>  
   <h3>
 
@@ -48,11 +48,10 @@
   </div>
 
   <h2>
-    Notes to Surveyors:
+    Notes to Surveyor:
   </h2>
   <p>
-  <strong>Surveyor 1:</strong>
-  </br>
+    </br>
   -	If the truck stops, collect ‘joined the queue’. Then when the truck reaches the security check, collect ‘reached the gantry’.
 </br>
   -	If the truck does not stop and goes straight to the gantry, collect ‘reached the gantry’ only.
