--- a/ingress.html
+++ b/ingress.html
@@ -82,7 +82,7 @@
   -	If the truck does not stop, no need to record.
 </br>
 </p>
-
+<img src="images/locations.png" alt="Surveyors location">
 
 </body>
 </html>
