update new files

--- a/egress.html
+++ b/egress.html
@@ -36,7 +36,7 @@
   </h2>  
   <h3>
 
-  <a href="https://silverlining.survalyzer.eu/pyexqpbixk" target="_blank">
+  <a href="https://silverlining.survalyzer.eu/izkvnvoayp" target="_blank">
       Egress - Surveyor 1
   </a>
 
